Add footer to page
Finished basic layout for footer

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,12 @@
 body {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
+/* Header styling */
 
 header {
   display: flex;
@@ -39,4 +44,23 @@ header ul {
 
 .link a:hover {
   text-decoration: underline;
+}
+
+/* Main content styling */
+
+main {
+  display: flex;
+  flex: 1;
+}
+
+/* Footer styling */
+
+footer {
+  height: 60px;
+  background-color: #1f2937;
+  color: white;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
