--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 130px;
+  padding: 0 180px;
   background-color: #1f2937;
   height: 60px;
   gap: 40px;
@@ -59,7 +59,7 @@ main {
 }
 
 .hero {
-  padding: 0 130px;
+  padding: 0 180px;
   background-color: #1f2937;
   color: white;
   display: flex;
@@ -171,6 +171,31 @@ main {
 .info img:hover ~ figcaption {
   font-size: 20px;
   transform: translateY(10px);
+}
+
+/* Quote section */
+
+.quote {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 180px;
+  background-color: #e5e7eb;
+  height: 350px;
+}
+
+.quote-text {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  margin: 10px;
+}
+
+.quote-author {
+  text-align: right;
+  font-size: 22px;
+  font-weight: bold;
+  margin: 10px;
 }
 
 /* Footer styling */
